# skdb

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build-multi-platform.yml
docs/: architecture.md  sk-runtime-guide.md
examples/runtime_tests/: main_test.hs  source_proj_structure.hs
queries/: test_queries.hsg
src/: lib.rs  main.rs  parser.rs  query.rs  structs.rs  web_server.rs
src/api/: mod.rs
src/log/: mod.rs
src/query_processor/: mod.rs
src/storage/: mod.rs
src/transaction/: mod.rs
