[package]
name = "skdb"
version = "0.1.0"
edition = "2021"
description = "A simple database implemented in Rust."
repository = "https://github.com/example-user/skdb"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] } # For sk-runtime CLI

[[bin]]
name = "sk-runtime"
path = "src/bin/sk-runtime.rs"
